Add a results showing function and solve some minor problems
Deleted results.html, the recipes will be shown in the index.html.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -96,4 +96,14 @@ nav a:hover {
 a {
   color: #212529;
 }
+
+#recipe-img {
+  margin-bottom: 15px;
+}
+
+#card-subtitle {
+  margin-top: -10px;
+  font-style: italic;
+  font-size: 13px;
+}
 /*# sourceMappingURL=style.css.map */
