--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -97,3 +97,14 @@ nav a {
 a{
   color: $text;
 }
+
+
+#recipe-img{
+  margin-bottom: 15px;
+}
+
+#card-subtitle{
+  margin-top: -10px;
+  font-style: italic;
+  font-size: 13px;
+}
